// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`npmrc default 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "save-exact=true
",
    }
  }
/>
`;

exports[`npmrc default 2`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": ".npmrc",
    }
  }
/>
`;
